@@ -52,6 +52,7 @@ t/http.t
 t/init.t
 t/init_test.txt
 t/multipart_init.t
+t/multipart_start.t
 t/no_tabindex.t
 t/param_fetch.t
 t/popup_menu.t
